[gd_scene load_steps=50 format=2]

[ext_resource path="res://assets/pudu_runner/tileset.png" type="Texture2D" id=1]
[ext_resource path="res://scenes/microgames/pudu_runner/sections/section.gd" type="Script" id=2]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PackedVector2Array( 40, 40, 0, 40, 0, 0, 40, 0 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PackedVector2Array( 40, 40, 0, 40, 0, 0, 40, 0 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PackedVector2Array( 40, 40, 0, 40, 0, 0, 40, 0 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PackedVector2Array( 40, 40, 0, 40, 0, 0, 40, 0 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PackedVector2Array( 40, 40, 0, 40, 0, 0, 40, 0 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PackedVector2Array( 40, 40, 0, 40, 0, 0, 40, 0 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PackedVector2Array( 40, 40, 0, 40, 0, 0, 40, 0 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PackedVector2Array( 40, 40, 0, 40, 0, 0, 40, 0 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PackedVector2Array( 40, 40, 0, 40, 0, 0, 40, 0 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PackedVector2Array( 40, 40, 0, 40, 0, 0, 40, 0 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PackedVector2Array( 40, 40, 0, 40, 0, 0, 40, 0 )

[sub_resource type="ConvexPolygonShape2D" id=12]
points = PackedVector2Array( 40, 40, 0, 40, 0, 0, 40, 0 )

[sub_resource type="ConvexPolygonShape2D" id=13]
points = PackedVector2Array( 40, 40, 0, 40, 0, 0, 40, 0 )

[sub_resource type="ConvexPolygonShape2D" id=14]
points = PackedVector2Array( 40, 40, 0, 40, 0, 0, 40, 0 )

[sub_resource type="ConvexPolygonShape2D" id=15]
points = PackedVector2Array( 40, 40, 0, 40, 0, 0, 40, 0 )

[sub_resource type="ConvexPolygonShape2D" id=16]
points = PackedVector2Array( 40, 40, 0, 40, 0, 0, 40, 0 )

[sub_resource type="ConvexPolygonShape2D" id=17]
points = PackedVector2Array( 40, 40, 0, 40, 0, 0, 40, 0 )

[sub_resource type="ConvexPolygonShape2D" id=18]
points = PackedVector2Array( 40, 40, 0, 40, 0, 0, 40, 0 )

[sub_resource type="ConvexPolygonShape2D" id=19]
points = PackedVector2Array( 40, 40, 0, 40, 0, 0, 40, 0 )

[sub_resource type="ConvexPolygonShape2D" id=20]
points = PackedVector2Array( 0, 0, 40, 0, 40, 40, 0, 40 )

[sub_resource type="ConvexPolygonShape2D" id=21]
points = PackedVector2Array( 40, 40, 0, 40, 0, 0, 40, 0 )

[sub_resource type="ConvexPolygonShape2D" id=22]
points = PackedVector2Array( 40, 40, 0, 40, 0, 0, 40, 0 )

[sub_resource type="ConvexPolygonShape2D" id=23]
points = PackedVector2Array( 40, 40, 0, 40, 0, 0, 40, 0 )

[sub_resource type="ConvexPolygonShape2D" id=24]
points = PackedVector2Array( 40, 40, 0, 40, 0, 0, 40, 0 )

[sub_resource type="ConvexPolygonShape2D" id=25]
points = PackedVector2Array( 40, 40, 0, 40, 0, 0, 40, 0 )

[sub_resource type="ConvexPolygonShape2D" id=26]
points = PackedVector2Array( 40, 40, 0, 40, 0, 0, 40, 0 )

[sub_resource type="ConvexPolygonShape2D" id=27]
points = PackedVector2Array( 40, 40, 0, 40, 0, 0, 40, 0 )

[sub_resource type="ConvexPolygonShape2D" id=28]
points = PackedVector2Array( 40, 40, 0, 40, 0, 0, 40, 0 )

[sub_resource type="ConvexPolygonShape2D" id=29]
points = PackedVector2Array( 40, 40, 0, 40, 0, 0, 40, 0 )

[sub_resource type="ConvexPolygonShape2D" id=30]
points = PackedVector2Array( 40, 40, 0, 40, 0, 0, 40, 0 )

[sub_resource type="ConvexPolygonShape2D" id=31]
points = PackedVector2Array( 40, 40, 0, 40, 0, 0, 40, 0 )

[sub_resource type="ConvexPolygonShape2D" id=32]
points = PackedVector2Array( 40, 40, 0, 40, 0, 0, 40, 0 )

[sub_resource type="ConvexPolygonShape2D" id=33]
points = PackedVector2Array( 40, 40, 0, 40, 0, 0, 40, 0 )

[sub_resource type="ConvexPolygonShape2D" id=34]
points = PackedVector2Array( 40, 40, 0, 40, 0, 0, 40, 0 )

[sub_resource type="ConvexPolygonShape2D" id=35]
points = PackedVector2Array( 40, 40, 0, 40, 0, 0, 40, 0 )

[sub_resource type="ConvexPolygonShape2D" id=36]
points = PackedVector2Array( 40, 40, 0, 40, 0, 0, 40, 0 )

[sub_resource type="ConvexPolygonShape2D" id=37]
points = PackedVector2Array( 40, 40, 0, 40, 0, 0, 40, 0 )

[sub_resource type="ConvexPolygonShape2D" id=38]
points = PackedVector2Array( 40, 40, 0, 40, 0, 0, 40, 0 )

[sub_resource type="ConvexPolygonShape2D" id=39]
points = PackedVector2Array( 40, 40, 0, 40, 0, 0, 40, 0 )

[sub_resource type="ConvexPolygonShape2D" id=40]
points = PackedVector2Array( 40, 40, 0, 40, 0, 0, 40, 0 )

[sub_resource type="ConvexPolygonShape2D" id=41]
points = PackedVector2Array( 40, 40, 0, 40, 0, 0, 40, 0 )

[sub_resource type="ConvexPolygonShape2D" id=42]
points = PackedVector2Array( 40, 40, 0, 40, 0, 0, 40, 0 )

[sub_resource type="ConvexPolygonShape2D" id=43]
points = PackedVector2Array( 40, 40, 0, 40, 0, 0, 40, 0 )

[sub_resource type="Shader" id=44]
code = "shader_type canvas_item;

uniform float fps = 6f;
uniform int frameCount = 6;
uniform int tileWidth = 40;

void fragment(){
	vec2 position = UV;
	float width = float(tileWidth)/float(textureSize(TEXTURE,0).x);
	position.x += width*float(int(TIME*fps)%frameCount);
	COLOR = texture(TEXTURE,position);
}"
custom_defines = ""

[sub_resource type="ShaderMaterial" id=45]
shader = SubResource( 44 )
shader_param/fps = 6.0
shader_param/frameCount = 6
shader_param/tileWidth = 40

[sub_resource type="TileSet" id=46]
0/name = "Grass"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 160, 160 )
0/tile_mode = 1
0/autotile/bitmask_mode = 0
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 64, Vector2( 0, 1 ), 257, Vector2( 0, 2 ), 4, Vector2( 1, 0 ), 260, Vector2( 1, 1 ), 324, Vector2( 1, 2 ), 5, Vector2( 1, 3 ), 256, Vector2( 2, 0 ), 321, Vector2( 2, 1 ), 325, Vector2( 2, 2 ), 261, Vector2( 2, 3 ), 68, Vector2( 3, 0 ), 320, Vector2( 3, 1 ), 69, Vector2( 3, 2 ), 65, Vector2( 3, 3 ), 1 ]
0/autotile/icon_coordinate = Vector2( 0, 3 )
0/autotile/tile_size = Vector2( 40, 40 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 12 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 13 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 14 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 15 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "Mossy Rocks"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 200, 0, 160, 160 )
1/tile_mode = 1
1/autotile/bitmask_mode = 0
1/autotile/bitmask_flags = [ Vector2( 0, 0 ), 64, Vector2( 0, 1 ), 257, Vector2( 0, 2 ), 4, Vector2( 1, 0 ), 260, Vector2( 1, 1 ), 324, Vector2( 1, 2 ), 5, Vector2( 1, 3 ), 256, Vector2( 2, 0 ), 321, Vector2( 2, 1 ), 325, Vector2( 2, 2 ), 261, Vector2( 2, 3 ), 68, Vector2( 3, 0 ), 320, Vector2( 3, 1 ), 69, Vector2( 3, 2 ), 65, Vector2( 3, 3 ), 1 ]
1/autotile/icon_coordinate = Vector2( 0, 3 )
1/autotile/tile_size = Vector2( 40, 40 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 16 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 16 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 17 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 18 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 19 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 20 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 21 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 22 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 23 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 24 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 25 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 26 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 27 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 28 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 29 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 30 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 31 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "Waterfall Rocks"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 200, 160, 160, 120 )
2/tile_mode = 2
2/autotile/icon_coordinate = Vector2( 0, 0 )
2/autotile/tile_size = Vector2( 40, 40 )
2/autotile/spacing = 0
2/autotile/occluder_map = [  ]
2/autotile/navpoly_map = [  ]
2/autotile/priority_map = [  ]
2/autotile/z_index_map = [  ]
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 32 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 32 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 33 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 34 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 35 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 36 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 37 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 38 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 39 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 40 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 41 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 42 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 43 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "Waterfall"
3/texture = ExtResource( 1 )
3/tex_offset = Vector2( 0, 0 )
3/material = SubResource( 45 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 320, 240, 40 )
3/tile_mode = 2
3/autotile/icon_coordinate = Vector2( 0, 0 )
3/autotile/tile_size = Vector2( 40, 40 )
3/autotile/spacing = 0
3/autotile/occluder_map = [  ]
3/autotile/navpoly_map = [  ]
3/autotile/priority_map = [  ]
3/autotile/z_index_map = [  ]
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0

[sub_resource type="RectangleShape2D" id=47]
extents = Vector2( 318.387, 229.87 )

[node name="Section" type="Node2D"]
script = ExtResource( 2 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 320, 0 )
tile_set = SubResource( 46 )
cell_size = Vector2( 40, 40 )
cell_custom_transform = Transform2D( 40, 0, 0, 40, 0, 0 )
format = 1
tile_data = PackedInt32Array( 65529, 0, 196609, 65530, 0, 3, 65531, 0, 3, 65532, 0, 3, 65533, 0, 3, 65534, 0, 3, 65535, 0, 3, 0, 0, 3, 1, 0, 3, 2, 0, 3, 3, 0, 3, 4, 0, 3, 5, 0, 3, 6, 0, 0, 131065, 0, 131072, 131066, 0, 131073, 131067, 0, 131073, 131068, 0, 131073, 131069, 0, 131073, 131070, 0, 131073, 131071, 0, 131073, 65536, 0, 131073, 65537, 0, 131073, 65538, 0, 131073, 65539, 0, 131073, 65540, 0, 131073, 65541, 0, 131073, 65542, 0, 196611 )

[node name="EndConnector" type="Node2D" parent="."]
position = Vector2( 640, 0 )

[node name="StartConnector" type="Node2D" parent="."]

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 322.147, -0.192596 )
shape = SubResource( 47 )
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
